crates/lang/macro/tests/ui/fail/M-03-message-returns-self.stderr
error: ink! messages must not return `Self`
  --> $DIR/M-03-message-returns-self.rs:15:39
   |
15 |         pub fn returns_self(&self) -> Self {}
   |                                       ^^^^
